--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -36,7 +36,27 @@
 
 .nav-login-cart{
     display: flex;
-    gap: 15px;
+    gap: 45px;
+    align-items: center;
+
+}
+.nav-login-cart button{
+    width: 136px;
+    height: 45px;
+    outline: none;
+    border: 1px solid #7a7a7a;
+    border-radius: 75px;
+    color:#515151;
+    font-size: 18px;
+    font-weight: 500;
+   background: white;
+   cursor: pointer;
+}
+
+.nav-login-cart button:active{
+    
+   background: cyan;
+   cursor: pointer;
 }
 
 .nav-cart-count{
@@ -45,8 +65,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: -35px;
+    margin-left: -55px;
+    border-radius: 11px;
+    font-size: 14px;
+    background: red;
+    color: white;
     
 
 }
 
-/* Write a CSS to make navbar links look good */
+.nav-cart-count{
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
